fix(console): highlight covering text in console (fixes #52)

--- a/src/app/assets/styles/codemirror.scss
+++ b/src/app/assets/styles/codemirror.scss
@@ -107,3 +107,8 @@
 .hljs-selector-id {
   color: #f92672;
 }
+
+// @see https://github.com/xtermjs/xterm.js/issues/692
+.xterm-selection-layer {
+  mix-blend-mode: exclusion;
+}
